# ResearchSummarizer-1

./: .replit  QUICK_START.md  README.md  app.py  models.py  postman_collection.json  postman_environment.json  pyproject.toml  replit.md  routes.py  setup_guide.md
attached_assets/: Pasted-TASK-Smart-Assistant-for-Research-Summarization-DEADLINE-Submit-within-7-days-from-the-date-of--1751882269030_1751882269030.txt
instance/: research_assistant.db
models_cache/: .gitkeep
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
services/: ai_service.py  document_processor.py  vector_store.py
static/css/: style.css
static/js/: app.js
templates/: base.html  document_analysis.html  index.html
uploads/: .gitkeep
