[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "AI Research Assistant for document analysis and Q&A"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "PyPDF2",
    "numpy",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
sentence-transformers = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
transformers = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
